# freenect_cloud_grabber

./: CMakeLists.txt  freenect_grabber.hpp  pcl_reader_freenect.cpp
